--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,48 @@
     android:padding="8dp"
     tools:context=".ui.main.MainActivity">
 
+    <RadioGroup
+        android:id="@+id/radiogroup_units"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
+
+        <RadioButton
+            android:id="@+id/radio_is_completed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tasks_is_completed"
+            android:textStyle="bold"
+            android:layout_marginEnd="8dp"/>
+
+        <RadioButton
+            android:id="@+id/radio_not_completed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tasks_not_completed"
+            android:textStyle="bold"
+            android:layout_marginEnd="8dp"/>
+
+        <RadioButton
+            android:id="@+id/radio_all_tasks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tasks_all"
+            android:textStyle="bold"/>
+    </RadioGroup>
+
     <ListView
         android:id="@+id/list_tasks"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="64dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/radiogroup_units" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/button_add_task"
